WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107983
Fix an ASSERT in BackgroundHTMLParser::appendPartial
https://bugs.webkit.org/show_bug.cgi?id=107983
Summary
Fix an ASSERT in BackgroundHTMLParser::appendPartial
Tony Gentilcore
Reported
2013-01-25 13:44:54 PST
Fix an ASSERT in BackgroundHTMLParser::appendPartial
Attachments
Patch
(1.90 KB, patch)
2013-01-25 13:49 PST
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Gentilcore
Comment 1
2013-01-25 13:49:42 PST
Created
attachment 184805
[details]
Patch
Eric Seidel (no email)
Comment 2
2013-01-25 14:11:42 PST
Comment on
attachment 184805
[details]
Patch If this gets rid of the asserts, than OK. But this calls into question all our other postTask callsites.
WebKit Review Bot
Comment 3
2013-01-25 14:36:58 PST
Comment on
attachment 184805
[details]
Patch Clearing flags on attachment: 184805 Committed
r140867
: <
http://trac.webkit.org/changeset/140867
>
WebKit Review Bot
Comment 4
2013-01-25 14:37:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug