Fix an ASSERT in BackgroundHTMLParser::appendPartial https://bugs.webkit.org/show_bug.cgi?id=107983

Reviewed by Eric Seidel.

The complier may create a temporary for the isolatedCopy of the source string. This could cause the refCount of the
StringImpl to be greater than one when appendPartial is invoked on the background thread.
This patch ensures the temporary is gone by that time which fixes the ASSERT in numerous layout tests.

No new tests because covered by existing tests.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::append):


Canonical link: https://commits.webkit.org/126180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140867 268f45cc-cd09-0410-ab3c-d52691b4dbfc